syntax = "proto3";

package web_micro_zhiliao;

option go_package = "./proto;web_micro_zhiliao";

service Webmicrozhiliao {
	rpc Call(CallRequest) returns (CallResponse) {}
}

message CallRequest {
	string name = 1;
}

message CallResponse {
	string msg = 1;
}

